--- a/project/index.html
+++ b/project/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>联系项目</title>
+    <title>练习项目</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
-    
+    <div class="header">
+
+    </div>
+    <div class="body">
+
+    </div>
+    <div class="footer">
+
+    </div>
 </body>
+
 </html>
