--- a/project/index.html
+++ b/project/index.html
@@ -5,16 +5,75 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>练习项目</title>
+    <title>刀剑神域主题网站</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body>
+<body class="background-image">
     <div class="header">
+        <div class="logo"></div>
+        <nav id="nav">
+            <div id="login">
+                <a href="#">用户登录</a>
+            </div>
+            <ul id="tb">
+                <li>
+                    <a href="index.html">首页</a>
+                </li>
+                <li>
+                    <a href="#">最新情报</a>
+                </li>
+                <li>
+                    <a href="#">人物介绍</a>
+                </li>
+                <li>
+                    <a href="#">活动大全</a>
+                </li>
+                <li>
+                    <a href="https://www.calibur.tv/bangumi/1/video">动漫播放</a>
+                </li>
+                <li>
+                    <a href="#">用户中心</a>
+                </li>
+            </ul>
 
+        </nav>
     </div>
     <div class="body">
+        <div id="home_image">
+            <div id="w_login">
+                <img src="./image/logo.png" alt="我是主页的大logo" id="home_logo">
+                <button class="u_login">用户登录</button>
+                <button class="u_registe">用户注册</button>
+            </div>
+            <img src="./image/sao.png" alt="" id="y_logo">
+        </div>
+        <div id="home_content">
+            <h1 id="title">最新情报</h1>
+        </div>
+        <div id="about">
+            <img src="./image/tit_logo.png" alt="" id="tlt_logo">
+            <p id="a_text">给您送上关于剑艺术·在线系列游戏的最新信息。
+                <br> 并且，如果成为游戏俱乐部“βeater ' s cafe”的会员的话，是原创内容。
+                <br> 可以享受各种活动、宣传活动等各种各样的服务和优惠。
+                <br> 今后将进一步追加原创内容！敬请期待！
+            </p>
+            <ul id="a_ul">
+                <li><img src="./image/img_content.png" alt=""></li>
+                <li><img src="./image/img_present.png" alt=""></li>
+                <li><img src="./image/img_mail.png" alt=""></li>
+            </ul>
+            <div id="u_text">
+                <img src="./image/tit_point.png" alt="">
+                <p>参加新会员注册，会员的网站访问，参加指定的问卷调查和宣传活动的话，可以获得βeater ' s cafe点。
+                    <br>储存βeater ' s cafe点的话，可以用积分来参加“特别活动”（不定期）。※1
+                </p>
+                <button style="width: 298px;height: 68px; margin-top:10px;background:url('./image/btn_login.png');border: none;">用户登录</button>
+            </div>
+        </div>
+        <div id="and_more">
 
+        </div>
     </div>
     <div class="footer">
 
